@@ -6,6 +6,7 @@ cm4all-beng-proxy (0.6.1) unstable; urgency=low
   * widget-uri: strip superfluous question mark from widget_base_address()
   * widget-uri: append parameters from the template first
   * widget-uri: re-add configured query string in widget_absolute_uri()
+  * widget-uri: eliminate configured query string in widget_external_uri()
 
  --
 
